overview: Fix corrupt minimized mirror views after rotation.

Test: manual
Bug: 842394
Change-Id: Iaf1bb8bb94da5b6d2e60009a21b02bde894f1326
Reviewed-on: https://chromium-review.googlesource.com/1105196
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569092}
Former-commit-id: 9929f29f00807cb472b72080a71399bf8379e54e